plugins/groovy/testdata/highlighting/AmbiguousCodeBlockInMethodCall.groovy
<error descr="Ambiguous code block">{print "foo"}</error>.call()